<resources>
    <string name="app_name">News Apps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_top_headline">Top Headline</string>
    <string name="title_everything">Everything</string>
    <string name="dummy_string">dummy</string>
    <string name="tab_general">General</string>
    <string name="tab_technology">Technology</string>
    <string name="text_content">Content</string>
    <string name="title_detail_news">Detail News</string>
    <string name="text_author">Author</string>
    <string name="text_description">Description</string>
    <string name="text_category_general">Breaking news</string>
    <string name="text_category_science">Science category</string>
    <string name="text_category_sport">Sport category</string>
    <string name="title_about_api">About Api</string>
    <string name="text_link_api">https://newsapi.org/</string>
</resources>
