<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:id="@+id/scrollViews"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.detail.NewsDetailActivity"
        android:background="@color/colorBackground">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/act_detail_poster"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/dimen_medium">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_medium">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_medium">

                    <TextView
                            android:id="@+id/act_detail_title"
                            style="@style/TitleTextDetail"
                            tools:text="@string/dummy_string"
                            android:textSize="25sp"/>

                    <TextView
                            android:id="@+id/act_detail_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            tools:text="@string/dummy_string"
                            android:textColor="@color/colorAccent"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_marginBottom="@dimen/dimen_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_medium">

                    <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/text_author"
                            android:textSize="14sp"/>

                    <TextView
                            android:id="@+id/act_detail_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_string"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_marginBottom="@dimen/dimen_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_medium"
                        android:minHeight="100dp">

                    <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/text_content"
                            android:textSize="14sp"/>

                    <TextView
                            android:id="@+id/act_detail_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_string"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_medium"
                        android:minHeight="100dp">

                    <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/text_description"
                            android:textSize="14sp"/>

                    <TextView
                            android:id="@+id/act_detail_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_string"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>